--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
     </main>
     <footer>
       <div>Sears think[box]</div>
+      <div id="current_date"></p>
+        <script>
+        date = new Date();
+        year = date.getFullYear();
+        month = date.getMonth() + 1;
+        day = date.getDate();
+        document.getElementById("current_date").innerHTML = month + "/" + day + "/" + year;
+        Date.now();
+
+        </script>
+
     </footer>
   </body>
 </html>
