--- a/index.html
+++ b/index.html
@@ -44,18 +44,12 @@
       </div>
     </main>
     <footer>
-      <div>Sears think[box]</div>
-      <div id="current_date"></p>
-        <script>
-        date = new Date();
-        year = date.getFullYear();
-        month = date.getMonth() + 1;
-        day = date.getDate();
-        document.getElementById("current_date").innerHTML = month + "/" + day + "/" + year;
-        Date.now();
-
-        </script>
-
+      <div>Sears think[box] :)</div>
+      <p><span id ='day'></span></p>
+      <p><span id ='month'></span></p>
+      <p><span id ='year'></span></p>
+      
+      </div>
     </footer>
   </body>
 </html>
