time work! (although it's military as of right now)

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       </div>
     </main>
     <footer>
-      <div>Sears think[box] :)</div>
-      <p><span id ='day'></span></p>
-      <p><span id ='month'></span></p>
-      <p><span id ='year'></span></p>
+      <div>Sears think[box]</div>
       
+      <p><span id ='time_span'></span></p>
+
+
       </div>
     </footer>
   </body>
