date and time both work now

--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
     <footer>
       <div>Sears think[box]</div>
       
-      <p><span id ='time_span'></span></p>
+    //  <p><span id ='time_span'></span></p>
 
+      <div id="date-time"></div>
+		<script>
+		
+		</script>
 
       </div>
     </footer>
