re inserted the other 2 two cards

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <iframe class="airtable-embed" id= "Activities" src="https://airtable.com/embed/shrizu0zEms5YHFC3?backgroundColor=yellow&layout=card" frameborder="0" onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>  
         </div>
       </div>
-      <!-- <div class="card">
+      <div class="card">
         <h1>Visitors</h1>
         
         <iframe class="airtable-embed" id="Visitors" src="https://airtable.com/embed/shrPhHfSSMpTgbEuU?backgroundColor=yellow&layout=card" frameborder="0" onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
@@ -32,7 +32,7 @@
         <h1>Tours</h1>
 
         <iframe class="airtable-embed" id="Tours" src="https://airtable.com/embed/shrc43rAvmAAozCQR?backgroundColor=yellow&layout=card" frameborder="0" onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
-      </div>-->
+      </div>
       
 
       <div class="card">
