--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Import the webpage's javascript file and call the function -->
     <script src="script.js"></script>
+    <script src="footer.js"></script>
     
     <!-- Import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css" />
@@ -17,28 +18,35 @@
   <body onload="runScripts()">
     <header></header>
     <main>
-      <div class="card">
+      <div class="card floor-1 floor-2">
         <h1>Activities</h1>
         <div class ="card-content">
           <iframe class="airtable-embed" id= "Activities" src="https://airtable.com/embed/shrizu0zEms5YHFC3?backgroundColor=yellow&layout=card" frameborder="0" onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>  
         </div>
       </div>
-      <div class="card">
+      <div class="card floor-1 floor-2">
         <h1>Visitors</h1>
         <div class ="card-content">
         <iframe class="airtable-embed" id="Visitors" src="https://airtable.com/embed/shrPhHfSSMpTgbEuU?backgroundColor=yellow&layout=card" frameborder="0" onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
       </div>
     </div>
-      <div class="card">
+      <div class="card floor-1 floor-2">
         <h1>Tours</h1>
         <div class ="card-content">
         <iframe class="airtable-embed" id="Tours" src="https://airtable.com/embed/shrc43rAvmAAozCQR?backgroundColor=yellow&layout=card" frameborder="0" onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
       </div>
     </div>
-      <div class="card">
-        <h1>Fliers</h1>
+      <div class="card floor-1 floor-2 floor-5">
+        <h1>Flyers</h1>
         <div class = "card-content">
           <iframe class="google-slides" style = "border: 0px;" src="https://docs.google.com/presentation/d/e/2PACX-1vQUmvVVXx3XZLkl7A8H-b7MbEt44AoAdvS2Yqm4TEtfddiR2cQv1pHXAq5oB8xsQrqvP7zGoa7F20Rd/embed?start=true&loop=true&delayms=5000"  allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
+      </div>
+
+      <div class="card floor-5">
+        <h1>Floor 5 Activities</h1>
+        <div class ="card-content">
+          <iframe class="airtable-embed" id= "Activities" src="https://airtable.com/embed/shrizu0zEms5YHFC3?backgroundColor=yellow&layout=card" frameborder="0" onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>  
         </div>
       </div>
       
@@ -46,10 +54,9 @@
     </main>
     <footer>
       <div>Sears think[box]</div>
+      <div class = "footer-space"></div>
       <div id="date-time"></div>
-		<script>
-		</script>
-      </div>
+		<script></script>
     </footer>
   </body>
 </html>
