--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     
     <!-- Import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css" /> 
+
+    <!-- Import Airtable JavaScript SDK (to avoid using Node.js)-->
+    <script src="https://unpkg.com/airtable@2.0.0/build/airtable.js"></script>
+
   </head>
   
   <body onload="runScripts()">
