floors 5 and 6 implemented

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <iframe class="airtable-embed" id="Tours" src="https://airtable.com/embed/shrc43rAvmAAozCQR?backgroundColor=yellow&layout=card" frameborder="0" onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
       </div>
     </div>
-    <div class="card floor-1 floor-2 floor-5">
+    <div class="card floor-1 floor-2 floor-5 floor-6">
       <h1>Flyers</h1>
       <div class = "card-content">
         <iframe class="google-slides" style = "border: 0px;" src="https://docs.google.com/presentation/d/e/2PACX-1vQUmvVVXx3XZLkl7A8H-b7MbEt44AoAdvS2Yqm4TEtfddiR2cQv1pHXAq5oB8xsQrqvP7zGoa7F20Rd/embed?start=true&loop=true&delayms=5000"  allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
@@ -51,6 +51,13 @@
         <h1>Floor 5 Activities</h1>
         <div class ="card-content">
           <iframe class="airtable-embed" id= "Activities" src="https://airtable.com/embed/shrizu0zEms5YHFC3?backgroundColor=yellow&layout=card" frameborder="0" onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>  
+        </div>
+      </div>
+
+      <div class="card floor-6">
+        <h1>Flyers</h1>
+        <div class = "card-content">
+          <iframe class="google-slides" style = "border: 0px;" src="https://docs.google.com/presentation/d/e/2PACX-1vQUmvVVXx3XZLkl7A8H-b7MbEt44AoAdvS2Yqm4TEtfddiR2cQv1pHXAq5oB8xsQrqvP7zGoa7F20Rd/embed?start=true&loop=true&delayms=5000"  allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
       </div>
     
