refactored floor 5 and 6 slides

--- a/index.html
+++ b/index.html
@@ -47,15 +47,23 @@
           onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
       </div>
     </div>
-    <div class="card floor-6">
+    <div class="card floor-6 center-content-6">
       <div class="card-content">
-        <center><iframe
-          src="https://docs.google.com/presentation/d/e/2PACX-1vTZPGh3JZownRFSAx0W4wSpU8ZXr2qPK5SXOC8BxSOySYn9Kk-DtNjJHpZN8Od59veoM7frRW-QwH-c/embed?start=false&loop=false&delayms=3000"
-          frameborder="0" width="1300" height="850" allowfullscreen="true" mozallowfullscreen="true"
-          webkitallowfullscreen="true"></iframe></center>
+        <iframe
+          src="https://docs.google.com/presentation/d/e/2PACX-1vTZPGh3JZownRFSAx0W4wSpU8ZXr2qPK5SXOC8BxSOySYn9Kk-DtNjJHpZN8Od59veoM7frRW-QwH-c/embed?start=true&loop=true&delayms=3000"
+          frameborder="0" width="1000" height="590" allowfullscreen="true" mozallowfullscreen="true"
+          webkitallowfullscreen="true"></iframe>
       </div>
     </div>
-    <div class="card floor-1 floor-2 floor-5 floor-6">
+    <div class="card floor-5 floor-5-activities">
+      <h1>Floor 5 Activities</h1>
+      <div class="card-content">
+        <iframe class="airtable-embed" id="Activities"
+          src="https://airtable.com/embed/shrizu0zEms5YHFC3?backgroundColor=yellow&layout=card" frameborder="0"
+          onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
+      </div>
+    </div>
+    <div class="card floor-1 floor-2">
       <h1>Flyers</h1>
       <div class="card-content">
         <iframe class="google-slides" style="border: 0px;"
@@ -63,13 +71,27 @@
           allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
     </div>
-
-    <div class="card floor-5">
-      <h1>Floor 5 Activities</h1>
+    <div class="card floor-5 floor-5-6-flyers">
+      <h1>think[box] Flyers</h1>
       <div class="card-content">
-        <iframe class="airtable-embed" id="Activities"
-          src="https://airtable.com/embed/shrizu0zEms5YHFC3?backgroundColor=yellow&layout=card" frameborder="0"
-          onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
+        <iframe class="google-slides" style="border: 0px;"
+          src="https://docs.google.com/presentation/d/e/2PACX-1vQUmvVVXx3XZLkl7A8H-b7MbEt44AoAdvS2Yqm4TEtfddiR2cQv1pHXAq5oB8xsQrqvP7zGoa7F20Rd/embed?start=true&loop=true&delayms=5000"
+          allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+      </div>
+    </div>
+    <div class="card floor-5 floor-5-6-flyers">
+      <h1>Floor 5 Flyers</h1>
+      <div class="card-content">
+        <iframe class="google-slides" style="border: 0px;"
+        src="https://docs.google.com/presentation/d/e/2PACX-1vQCBg-bveuLmMy24SVI39tJk9MhGQ7bhgWR2WJBvcsyX8rixU7B9UNnP3_Dv2X-J6sDrRhgvOOTO16V/embed?start=true&loop=true&delayms=3000"          allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+      </div>
+    </div>
+    <div class="card floor-6 floor-5-6-flyers">
+      <h1>Flyers</h1>
+      <div class="card-content">
+        <iframe class="google-slides" style="border: 0px;"
+          src="https://docs.google.com/presentation/d/e/2PACX-1vQUmvVVXx3XZLkl7A8H-b7MbEt44AoAdvS2Yqm4TEtfddiR2cQv1pHXAq5oB8xsQrqvP7zGoa7F20Rd/embed?start=true&loop=true&delayms=5000"
+          allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
     </div>
   </main>
