extended floor 6 entr card

--- a/index.html
+++ b/index.html
@@ -48,17 +48,19 @@
       </div>
     </div>
     <div class="card floor-6 center-content-6 floor-7">
-      <div class="card-content">
+      <h1>Entrepreneurship</h1>
+      <div class="card-content center-iframe"> <!-- Apply the center-iframe class here -->
         <iframe
           src="https://docs.google.com/presentation/d/e/2PACX-1vTZPGh3JZownRFSAx0W4wSpU8ZXr2qPK5SXOC8BxSOySYn9Kk-DtNjJHpZN8Od59veoM7frRW-QwH-c/embed?start=true&loop=true&delayms=3000"
-          frameborder="0" width="1000" height="590" allowfullscreen="true" mozallowfullscreen="true"
+          frameborder="0" width="982" height="590" allowfullscreen="true" mozallowfullscreen="true"
           webkitallowfullscreen="true"></iframe>
       </div>
+    </div>
     </div>
     <div class="card floor-5 floor-5-activities">
       <h1>Floor 5 Activities</h1>
       <div class="card-content">
-        <iframe class="airtable-embed" id="Activities"
+        <iframe class="airtable-embed" id="Activities" 
           src="https://airtable.com/embed/shrizu0zEms5YHFC3?backgroundColor=yellow&layout=card" frameborder="0"
           onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
       </div>
