--- a/index.html
+++ b/index.html
@@ -49,22 +49,29 @@
     </div>
     <div class="card floor-6 center-content-6 floor-7">
       <h1>Entrepreneurship</h1>
-      <div class="card-content center-iframe"> <!-- Apply the center-iframe class here -->
+      <div class="card-content center-iframe"> 
         <iframe
           src="https://docs.google.com/presentation/d/e/2PACX-1vTZPGh3JZownRFSAx0W4wSpU8ZXr2qPK5SXOC8BxSOySYn9Kk-DtNjJHpZN8Od59veoM7frRW-QwH-c/embed?start=true&loop=true&delayms=3000"
           frameborder="0" width="982" height="590" allowfullscreen="true" mozallowfullscreen="true"
           webkitallowfullscreen="true"></iframe>
       </div>
     </div>
+    <div class="card floor-5 center-content-6">
+      <h1>Calendar</h1>
+      <div class="card-content center-iframe"> 
+        <iframe
+          src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%2333B679&ctz=America%2FNew_York&mode=WEEK&title=Floor%205%20Upcoming%20Events&src=Y2FzZS5lZHVfMzBzZDRza2V2OWg5bnM0ZHZlaTY2OHJqYThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=Y18xNzhmMWYwZjBhMjIyMjM0NDY2NmI5NjEwYTI4MTcwMzkyYTcxMDhjZmQ2ZTA4MTNlOGVhYWIyM2Y4OTAyZjNiQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=Y181OTExMTM1NDNhN2FhMmQ0ZjhhNzc2ODM1ZDM2NTM2NWQyYmZhOWJmNGJmOGI4MjM3NGJhNzJkMDI3ZTNkMzI1QGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23E4C441&color=%23EF6C00&color=%23EF6C00"
+          style="border:solid 1px #777" width="1100" height="600" frameborder="0" scrolling="no"></iframe>
+      </div>
     </div>
-    <div class="card floor-5 floor-5-activities">
+    <!-- <div class="card floor-5 floor-5-activities">
       <h1>Floor 5 Activities</h1>
       <div class="card-content">
         <iframe class="airtable-embed" id="Activities" 
           src="https://airtable.com/embed/shrizu0zEms5YHFC3?backgroundColor=yellow&layout=card" frameborder="0"
           onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
       </div>
-    </div>
+    </div> -->
     <div class="card floor-1 floor-2 floor-3 floor-4">
       <h1>Flyers</h1>
       <div class="card-content">
@@ -73,19 +80,20 @@
           allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
     </div>
-    <div class="card floor-5 floor-5-6-flyers">
+    <!-- <div class="card floor-5 floor-5-6-flyers">
       <h1>think[box] Flyers</h1>
       <div class="card-content">
         <iframe class="google-slides" style="border: 0px;"
           src="https://docs.google.com/presentation/d/e/2PACX-1vQUmvVVXx3XZLkl7A8H-b7MbEt44AoAdvS2Yqm4TEtfddiR2cQv1pHXAq5oB8xsQrqvP7zGoa7F20Rd/embed?start=true&loop=true&delayms=5000"
           allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
-    </div>
+    </div> -->
     <div class="card floor-5 floor-5-6-flyers">
       <h1>Floor 5 Flyers</h1>
       <div class="card-content">
         <iframe class="google-slides" style="border: 0px;"
-        src="https://docs.google.com/presentation/d/e/2PACX-1vQCBg-bveuLmMy24SVI39tJk9MhGQ7bhgWR2WJBvcsyX8rixU7B9UNnP3_Dv2X-J6sDrRhgvOOTO16V/embed?start=true&loop=true&delayms=3000"          allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+          src="https://docs.google.com/presentation/d/e/2PACX-1vQCBg-bveuLmMy24SVI39tJk9MhGQ7bhgWR2WJBvcsyX8rixU7B9UNnP3_Dv2X-J6sDrRhgvOOTO16V/embed?start=true&loop=true&delayms=3000"
+          allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
     </div>
     <div class="card floor-6 floor-5-6-flyers floor-7">
