temporary welcome sign

--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
 <body onload="runScripts()">
   <header></header>
   <main>
-    <div class="card floor-1 floor-2 floor-3 floor-4">
+    <div class="welcome-sign-h1 floor-1 floor-2 floor-3 floor-4">
+      <h1>Welcome to Sears think[box]!</h1>
+      <div class="welcome-sign-h2 floor-1 floor-2 floor-3 floor-4">
+        <h3><i>Your one stop shop for all of your innovative ideas.</i></h3>
+      </div>
+    </div>
+    
+    <!-- <div class="card floor-1 floor-2 floor-3 floor-4">
       <h1>Activities</h1>
       <div class="card-content">
         <iframe class="airtable-embed" id="Activities"
@@ -46,7 +53,7 @@
           src="https://airtable.com/embed/shrc43rAvmAAozCQR?backgroundColor=yellow&layout=card" frameborder="0"
           onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
       </div>
-    </div>
+    </div> -->
     <div class="card floor-6 center-content-6 floor-7">
       <h1>Entrepreneurship</h1>
       <div class="card-content center-iframe"> 
@@ -64,30 +71,15 @@
           style="border:solid 1px #777" width="1100" height="600" frameborder="0" scrolling="no"></iframe>
       </div>
     </div>
-    <!-- <div class="card floor-5 floor-5-activities">
-      <h1>Floor 5 Activities</h1>
-      <div class="card-content">
-        <iframe class="airtable-embed" id="Activities" 
-          src="https://airtable.com/embed/shrizu0zEms5YHFC3?backgroundColor=yellow&layout=card" frameborder="0"
-          onmousewheel="" width="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
-      </div>
-    </div> -->
-    <div class="card floor-1 floor-2 floor-3 floor-4">
+    
+    <!-- <div class="card floor-1 floor-2 floor-3 floor-4">
       <h1>Flyers</h1>
       <div class="card-content">
         <iframe class="google-slides" style="border: 0px;"
           src="https://docs.google.com/presentation/d/e/2PACX-1vQUmvVVXx3XZLkl7A8H-b7MbEt44AoAdvS2Yqm4TEtfddiR2cQv1pHXAq5oB8xsQrqvP7zGoa7F20Rd/embed?start=true&loop=true&delayms=5000"
           allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-      </div>
+      </div> -->
     </div>
-    <!-- <div class="card floor-5 floor-5-6-flyers">
-      <h1>think[box] Flyers</h1>
-      <div class="card-content">
-        <iframe class="google-slides" style="border: 0px;"
-          src="https://docs.google.com/presentation/d/e/2PACX-1vQUmvVVXx3XZLkl7A8H-b7MbEt44AoAdvS2Yqm4TEtfddiR2cQv1pHXAq5oB8xsQrqvP7zGoa7F20Rd/embed?start=true&loop=true&delayms=5000"
-          allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-      </div>
-    </div> -->
     <div class="card floor-5 floor-5-6-flyers">
       <h1>Floor 5 Flyers</h1>
       <div class="card-content">
